# Learning_OpenGL_Qt

./: .gitignore  CmakeLists.txt  README.md
Lesson_1/: README.md
Lesson_1/Lesson_1a/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  shaderprogram.cpp  shaderprogram.h
Lesson_1/Lesson_1a/Shaders/: basic.frag  basic.vert
Lesson_1/Lesson_1b/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  shaderprogram.h
Lesson_1/Lesson_1b/Shaders/: basic.frag  basic.vert
Lesson_2/: README.md
Lesson_2/Lesson_2a/: CMakeLists.txt  glwidget.cpp  glwidget.h  mainwindow.cpp  shaderprogram.cpp  shaderprogram.h
Lesson_2/Lesson_2a/Shaders/: basictexture.frag  basictexture.vert
Lesson_2/Lesson_2b/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp
Lesson_3_3D/: README.md
Lesson_3_3D/Lesson_3a/: CMakeLists.txt  camera.cpp  camera.h  glwidget.cpp  glwidget.h  mainwindow.cpp  resources.qrc  shaderprogram.cpp  shaderprogram.h  texture2D.cpp  texture2D.h
Lesson_3_3D/Lesson_3a/Shaders/: basictexture3D.vert
Lesson_3_3D/Lesson_3b/: CMakeLists.txt  camera.cpp  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  resources.qrc  shaderprogram.cpp  shaderprogram.h  texture2D.cpp  texture2D.h
Lesson_3_3D/Lesson_3b/Shaders/: basictexture3D.frag
